--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="./le1.svg" />
+    <meta 
+      name="viewport"
+      content="width=device-width,
+      initial-scale=1.0"
+    />
     <script async type="module" src="/src/main.jsx"></script>
     <title>Home | Leonardo</title>
   </head>
