--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./le1.svg" />
-    <meta 
-      name="viewport"
-      content="width=device-width,
-      initial-scale=1.0"
-    />
-    <script async type="module" src="/src/main.jsx"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Leonardo</title>
+    
+    <link rel="icon" as="svg" type="image/svg+xml" href="./le1.svg" />
+    <script type="module" src="/src/main.jsx"></script>
   </head>
   <body>
     <div id="root"></div>
